# reliability_klessydra

./: README.md
RTL/DSP/: PKG_RiscV_Klessydra_syn.vhd  RTL-Accumulator.vhd  RTL-Accumulator_syn.vhd  RTL-Adder.vhd  RTL-Adder_syn.vhd  RTL-Comparator.vhd  RTL-Comparator_syn.vhd  RTL-DSP_Unit.vhd  RTL-DSP_Unit_syn.vhd  RTL-Excpt_Handling_syn.vhd  RTL-Multiplier.vhd  RTL-Multiplier_syn.vhd  RTL-Shifter.vhd  RTL-Shifter_syn.vhd
RTL/RISCV/: PKG_RiscV_Klessydra.vhd  RTL-ID_STAGE.vhd  RTL-IF_STAGE.vhd  RTL-Load_Store_Unit.vhd  RTL-Processing_Pipeline.vhd  RTL-Processing_Pipeline_gl.vhd  RTL-Processing_Pipeline_syn.vhd  RTL-Registerfile.vhd  RTL-Scratchpad_Memory_Interface.vhd  STR-Klessydra_top.vhd
sw/: cmake_configure.klessydra-t3.gcc.sh
sw/apps/: CMakeSim.txt
sw/apps/klessydra_tests/: CMakeLists.txt
sw/apps/klessydra_tests/fault_tests/: CMakeLists.txt
sw/apps/klessydra_tests/fault_tests/adhoc_1accl/: CMakeLists.txt  adhoc_1accl.c
sw/apps/klessydra_tests/fault_tests/conv_1accl/: CMakeLists.txt  conv_1accl.c
sw/apps/klessydra_tests/fault_tests/data/: calc_ref.c  dataset.h  gen_conv_dataset.py  gen_dataset.py  run.sh
sw/apps/klessydra_tests/fault_tests/matmul_1accl/: CMakeLists.txt  matmul_1accl.c
sw/apps/klessydra_tests/fault_tests/test_1accl/: CMakeLists.txt  test_1accl.c
sw/apps/klessydra_tests/fault_tests/test_maccl/: CMakeLists.txt  test_maccl.c  test_maccl_old.c
sw/apps/klessydra_tests/klessydra_vcu_tests/: CMakeLists.txt
sw/apps/klessydra_tests/klessydra_vcu_tests/Matmul/: CMakeLists.txt  (+6 more)
sw/apps/klessydra_tests/toggle_tests/: CMakeLists.txt
(+17 files in other folders)
